--- a/html/blog.html
+++ b/html/blog.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
-    <title>Blog - Motivation Co.</title>
+    <title>Blog - Motiation Co.</title>
 </head>
 
 <body>
@@ -16,14 +16,14 @@
     <header>
         <div class="nav-bar">
             <div class="left-nav-bar">
-                <a href="../index.html" style="text-decoration: none;">
+                <a href="index.html" style="text-decoration: none;">
                     <h2>Motivation Co.</h2>
                 </a>
                 <img src="../imgs/gearicon.png" width="25" height="25" alt="gear icon">
             </div>
             <nav>
                 <ul>
-                    <li><a href="../index.html">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="blog.html" class="current-page">Blog</a></li>
                     <li><a href="workout.html">Workout</a></li>
                     <li><a href="contact.html">Contact</a></li>
@@ -37,8 +37,8 @@
     <div class="main-container">
 
         <main>
-            <section class="blog-title">
-                <img src="../imgs/homeImg.jpg" alt="lion" style="width: 100%;">
+            <section class="Blog-Title">
+                <img class="main-image" src="../imgs/homeImg.jpg" alt="lion" style="width: 100%;">
                 <h1 class="centered"><span style="border-bottom: 0.25rem solid crimson;">Blog Title</span></h1>
                 <h2 class="under-centered" style="padding: 0.25rem 0;">Some text goes here</h2>
             </section>
@@ -49,7 +49,7 @@
                 <div class="card">
                     <h2>TITLE HEADING</h2>
                     <h5>Title description, Month Day, Year</h5>
-                    <img src="../imgs/quote1.jpg" alt="blog " />
+                    <a href="#"><img class="left-img" src="../imgs/quote1.jpg" alt="blog "/></a>
                     <p>Some text..</p>
                     <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do
                         eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
@@ -58,7 +58,7 @@
                 <div class="card">
                     <h2>TITLE HEADING</h2>
                     <h5>Title description, Month Day, Year</h5>
-                    <img src="../imgs/quote2.jpg" alt="blog " />
+                   <a href="#"> <img src="../imgs/quote2.jpg" alt="blog "/></a>
                     <p>Some text..</p>
                     <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do
                         eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
@@ -68,15 +68,15 @@
 
             <div class="right-column">
                 <div class="card">
-                    <h2>About Me</h2>
-                    <img src="../imgs/blog-cover.jpg" alt="me" />
+                    <h2>About Us</h2>
+                    <a href="#"><img src="../imgs/blog-cover.jpg" alt="me" /></a>
                     <p>Some text about me in culpa qui officia deserunt mollit anim..</p>
                 </div>
                 <div class="card">
                     <h3>Popular Posts</h3>
-                    <img src="../imgs/quote1.jpg" alt="popular" />
-                    <img src="../imgs/quote2.jpg" alt="popular" />
-                    <img src="../imgs/blog-cover.jpg" alt="popular" />
+                    <a href="#"><img src="../imgs/quote1.jpg" alt="popular" /></a>
+                    <a href="#"><img src="../imgs/quote2.jpg" alt="popular" /></a>
+                    <a href="#"><img src="../imgs/blog-cover.jpg" alt="popular" /></a>
                 </div>
                 <div class="card">
                     <h3>Follow Us</h3>
@@ -84,7 +84,7 @@
                 </div>
             </div>
         </div>
-    <!--Main Content Ends-->
+
         <footer>
             <h2>Footer</h2>
         </footer>
